--- a/css/health.css
+++ b/css/health.css
@@ -169,70 +169,21 @@ div.methonav a {
 div.methonav a:hover {
 	text-decoration: underline;
 }
-
-div.girleducation {
-	width: 100%;
-	height: 1400px;
-	display: flex;
-	justify-content: space-around;
-	margin: 40px 0 40px 0;
-	/* border: 1px solid red; */
-}
-
-div.pic1ge {
-	width: 20%;
-	height: 750px;
-	display: flex;
-	flex-direction: column;
-	/* border: 1px solid red; */
-	background-image: url("../images/pic1ge.jpg");
-	background-size: cover;
-
-
-}
-
-div.getext {
-	width: 60%;
+div.communityhealth {
+	width:100%;
 	height: auto;
 	display: flex;
-	flex-direction: column;
-	margin: 0 20px 0 20px;
-	/* border: 1px solid red; */
-
-
+	justify-content: center;
+    flex-direction: column;
+	align-items: center;
 }
 
-div.girleducation h1 {
-	font-size: 18px;
-	font-family: calibri;
-	color: #000033; 
-	line-height: 15px;
-	/* border: 1px solid red; */
-	width: 200px;
-	margin: 10px 0 10px 0;
-
-
-
+div.communityhealth img {
+    width: 70%;
+    height: auto;
+	/* flex-direction: column; */
+	padding: 50px 0 0 0;
 }
-div.girleducation p {
-	font-size: 16px;
-	font-family: calibri;
-	/* padding: 8px 8px; */
-	/* background-color: #000033; */
-	line-height: 22px;
-}
-
-div.pic2ge {
-	width: 20%;
-	height: 750px;
-	display: flex;
-	flex-direction: column;
-	/* border: 1px solid red; */
-	background-image: url("../images/pic2ge.jpg");
-	background-size: cover;
-
-} 
-
 
 footer {
 	/* display: flex; */
