--- a/css/codeme.css
+++ b/css/codeme.css
@@ -19,8 +19,8 @@ header {
 }
 
 header img {
-	width: 180px;
-	height: 90px;
+	width: 100px;
+	height: auto;
 	/* position: absolute; */
 	margin-top: 20px;
 	margin-left: 20px;
@@ -176,14 +176,66 @@ div.codeme {
 	justify-content: center;
     flex-direction: column;
 	align-items: center;
+	/* border: 1px solid red; */
+	padding: 20px 0 40px 0; 
+
 }
 
-div.codeme img {
-    width: 70%;
-    height: auto;
-	/* flex-direction: column; */
-	padding: 50px 0 0 0;
+div.piccodeme {
+    width: 950px;
+    height: 650px;
+	background-image: url("../images/FYN13.JPG");
+	background-size: cover;
+	background-position: center;
+	/* border: 1px solid red; */
+	display: flex;
+	justify-content: center;
+
 }
+
+div.ppiccodeme {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	/*border: solid 1px red;*/
+	background: rgba(0,0,0,0.5);
+	margin-top: 460px;
+	width: 300px;
+	height: 100px;
+	/* margin-bottom: 50px */
+}
+
+div.ppiccodeme p {
+	/* border: 1px solid red; */
+	font-size: 50px;
+	font-family: Copperplate Gothic;
+	font-weight: bold;
+	color: white;
+
+}
+
+div.textcodeme {
+	width: 950px;
+    height: auto;
+
+}
+div.textcodeme h2 {
+	font-family: Exotc350 DmBd BT;
+	/* color: #252525; */
+	padding: 30px 0 10px 0;
+	color: #000033;
+	text-decoration: underline;
+}
+
+div.textcodeme p {
+	font-family: calibri;
+	color: #252525;
+	line-height: 22px;
+	font-size: 17px; 
+	text-align: justify;
+	/* padding: 0 80px 0 80px; */
+}
+
 
 footer {
 	/* display: flex; */
