--- a/css/projectprog.css
+++ b/css/projectprog.css
@@ -19,8 +19,8 @@ header {
 }
 
 header img {
-	width: 180px;
-	height: 90px;
+	width: 100px;
+	height: auto;
 	/* position: absolute; */
 	margin-top: 20px;
 	margin-left: 20px;
@@ -169,20 +169,134 @@ div.methonav a {
 div.methonav a:hover {
 	text-decoration: underline;
 }
-div.projectprog {
+
+div.contentwrap {
 	width:100%;
 	height: auto;
 	display: flex;
 	justify-content: center;
     flex-direction: column;
 	align-items: center;
+	/* border: 1px solid red; */
+	padding: 20px 0 40px 0; 
+
 }
 
-div.projectprog img {
-    width: 70%;
-    height: auto;
-	/* flex-direction: column; */
-	padding: 50px 0 0 0;
+div.projectprog {
+	width: 1300px;
+	height: auto;
+	display: flex;
+	align-items: center;
+	justify-content: space-evenly;
+	/* border: solid 1px red; */
+	flex-wrap: wrap;
+}
+
+div.hprog {
+	display: flex;
+	/* border: 1px solid red; */
+	justify-content: flex-start;
+	align-items: center;
+	width: 1000px;
+	
+}
+div.hprog h1 {
+	font-family: Calibri;
+	text-align: center;
+}
+
+
+div.hprog img {
+	width: 100px;
+	height: 100px;
+	margin-right: 200px;
+}
+div.picprog {
+    width: 1000px;
+    height: 650px;
+	background-image: url("../images/pic1prog.jpg");
+	background-size: cover;
+	background-position: center;
+	/* border: 1px solid red; */
+	display: flex;
+	justify-content: center;
+	margin: 30px 0 0 0;
+
+}
+
+div.one {
+	width: 700px;
+	height: 400px;
+	/* border: solid 1px red; */
+
+}
+div.two {
+	width: 450px;
+	height: 300px;
+	/* border: solid 1px red; */
+	background-image: url("../images/picprog.jpg");
+	background-position: center;
+	background-size: cover;
+	display: flex;
+	justify-content: space-around;
+	margin: 10px 0 10px 0;
+
+
+}
+
+div.four {
+	width: 450px;
+	height: 300px;
+	/* border: solid 1px red; */
+	background-image: url("../images/pic5prog.jpg");
+	background-position: center;
+	background-size: contain;
+	background-repeat: no-repeat;
+	display: flex;
+	justify-content: center;
+	padding: 10px 0 10px 0;
+	margin: 10px 0 10px 0;
+
+
+}
+
+div.six{
+	width: 450px;
+	height: 300px;
+	/* border: solid 1px red; */
+	background-image: url("../images/pic3prog.jpg");
+	background-position: center;
+	background-size: cover;
+	display: flex;
+	justify-content: center;
+	padding: 10px 0 10px 0;
+	margin: 10px 0 10px 0;
+
+}
+
+div.baseprog {
+	/* display: flex; */
+	/* border: 1px solid red; */
+	justify-content: flex-start;
+	align-items: center;
+	width: 1200px;
+}
+
+div.contentwrap h2 {
+	font-family: Exotc350 DmBd BT;
+	/* color: #252525; */
+	padding: 30px 0 10px 0;
+	color: #000033;
+	text-decoration: underline;
+}
+
+div.contentwrap p {
+	font-family: calibri;
+	color: #252525;
+	line-height: 22px;
+	font-size: 17px; 
+	text-align: justify;
+	/* padding: 0 80px 0 80px; */
 }
 
 footer {
